        PR c++/35097         * pt.c (tsubst): Don't look up a template typedef in an explicit         specialization.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@132253 138bc75d-0d04-0410-961f-82ee72b054a4